fixed scrollbars on main nav issue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -48,7 +48,7 @@ header p {
 /* Navigation */
 .main-nav{
   max-width: 100vw;
-  overflow: scroll;
+  overflow: hidden;
 }
 
 .main-nav ul {
